UI fix: Enabled ultra-bold font for logo and widened container for text wrap fix

--- a/styles.css
+++ b/styles.css
@@ -852,6 +852,11 @@ p {
     margin: 0 auto;
 }
 
+.team-content {
+    max-width: 950px;
+    margin: 0 auto;
+}
+
 .team-long-description {
     line-height: 2;
     color: var(--text-main);
